# BiKA

./: .gitignore  BiKA_MLP_MNIST_T.ipynb  README.md  pyproject.toml  setup.py
.ipynb_checkpoints/: BiKA_MLP_MNIST_T-checkpoint.ipynb
CIFAR10/: CNV_BiKA.ipynb  completed_notebooks.txt
CIFAR10/.ipynb_checkpoints/: completed_notebooks-checkpoint.txt
CIFAR10/.virtual_documents/: CNV_1bit.ipynb
MNIST/: TCV_8bit.ipynb  TCV_BiKA.ipynb  completed_notebooks.txt
MNIST/.ipynb_checkpoints/: LFC_2bit-checkpoint.ipynb  LFC_4bit-checkpoint.ipynb  LFC_8bit-checkpoint.ipynb  LFC_BiKA-checkpoint.ipynb  SFC_1bit-checkpoint.ipynb  SFC_2bit-checkpoint.ipynb  SFC_4bit-checkpoint.ipynb  SFC_8bit-checkpoint.ipynb  SFC_BiKA-checkpoint.ipynb  TCV_1bit-checkpoint.ipynb  TCV_2bit-checkpoint.ipynb  TCV_4bit-checkpoint.ipynb  TCV_8bit-checkpoint.ipynb
backup/: BiKA_CNN_MNIST_T.ipynb  BiKA_MLP_MNIST_T.ipynb
backup/.ipynb_checkpoints/: BiKA_CNN_MNIST_T-checkpoint.ipynb  BiKA_MLP_MNIST_T-checkpoint.ipynb
bika_extension/: bika_conv2d_cuda.cu  bika_linear_cuda.cu
bika_library/0.0/: bika_conv2d.cpp  bika_linear.cpp  setup.py
bika_library/0.1/: bika_binding.cpp  bika_conv2d.cu  bika_linear.cu  setup.py
bika_library/Test/: BiKALib_Test.ipynb
experiment/bdd100k_BiKASegNet/: config.yml  log.csv  model_best.pth
experiment/segBiKA_cont/: config.yml  log.csv  model_best.pth  train.py
lib_test/: BiKA_Lib_Test.ipynb
road_segmentation/: README.md  config.py  configs.yaml  dataset.py  train.py
road_segmentation/data/: __init__.py  bdd100k.py  transforms.py
src/bika/: BiKA_Conv2d.py  (+4 more)
(+36 files in other folders)
