[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "ninja",
    "packaging"
]
build-backend = "setuptools.build_meta"

[project]
name = "bika"
version = "0.1.4"
description = "BiKA: CUDA-accelerated PyTorch layers"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Yuhao Liu", email = "ieyuhaoliu@gmail.com" }
]
dependencies = [
    "torch",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bika = [
    "csrc/*.cpp",
    "csrc/*.cu",
    "csrc/*.h",
    "csrc/*.cuh"
]